--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,26 +4,26 @@
  @author Martin Denham [mjdenham at gmail dot com]
 -->
 <resources>
-    <string name="app_name_short">Bible Study</string>
-    <string name="app_name_medium">Bible Study (And Bible)</string>
-    <string name="app_name_long">Bible Study app, by And Bible Open Source Project</string>
+    <string name="app_name_short">매일 성서 읽기</string>
+    <string name="app_name_medium">매일 성서 읽기 (성서)</string>
+    <string name="app_name_long">매일 성서 읽기 어플리케이션</string>
 
     <string name="version_text">Version %s</string>
-    <string name="no_sdcard_error">Please insert an SD card and restart application.</string>
+    <string name="no_sdcard_error">SD카드를 넣고 재실행해주세요.</string>
 
     <!-- Main menu -->
-    <string name="menu">Menu</string>
-    <string name="chooseBook">Document</string>
+    <string name="menu">메뉴</string>
+    <string name="chooseBook">문서</string>
     <string name="selectPassage">Passage</string>
     <string name="search">Find</string>
     <string name="settings">Application preferences</string>
     <string name="history">History</string>
     <string name="speak">Speak</string>
-    <string name="help">Help</string>
+    <string name="help">도움</string>
     <string name="other">Other</string>
     <string name="help_and_tips">Help &amp; tips</string>
 
-    <string name="administration">Administration</string>
+    <string name="administration">관리</string>
 
     <string name="rate_application">Rate &amp; Review in Google Play</string>
     <string name="chooce_document">Choose Document</string>
