--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,28 +15,28 @@
     <string name="menu">메뉴</string>
     <string name="chooseBook">문서</string>
     <string name="selectPassage">Passage</string>
-    <string name="search">Find</string>
-    <string name="settings">Application preferences</string>
-    <string name="history">History</string>
-    <string name="speak">Speak</string>
+    <string name="search">찾기</string>
+    <string name="settings">프로그램 기본 설정</string>
+    <string name="history">기록</string>
+    <string name="speak">듣기</string>
     <string name="help">도움</string>
-    <string name="other">Other</string>
-    <string name="help_and_tips">Help &amp; tips</string>
+    <string name="other">기타</string>
+    <string name="help_and_tips">팁</string>
 
     <string name="administration">관리</string>
 
-    <string name="rate_application">Rate &amp; Review in Google Play</string>
-    <string name="chooce_document">Choose Document</string>
+    <string name="rate_application">리뷰작성 하러 가기</string>
+    <string name="chooce_document">언어</string>
 
     <!-- Passage navigation -->
-    <string name="choosePassageBookName">Choose Book</string>
-    <string name="choosePassageChapterName">Choose Chapter</string>
-    <string name="choosePassageVerseName">Choose Verse</string>
-    <string name="bible">Bible</string>
+    <string name="choosePassageBookName">성서 선택</string>
+    <string name="choosePassageChapterName">장</string>
+    <string name="choosePassageVerseName">절</string>
+    <string name="bible">성서</string>
     <string name="deuterocanonical">Deuterocanonical</string>
 
     <!--  Search -->
-    <string name="search_index">Search Index</string>
+    <string name="search_index">인덱스 검색</string>
     <string name="index_creation_required">An index is required to search.</string>
     <string name="create_index_for">An index is required to search. \n\nCreate index for %s?</string>
     <string name="rebuild_index_for">Rebuild index for %s?</string>
@@ -179,18 +179,18 @@
     <string name="cpv_transparency">Transparency</string>
 
     <!-- Window -->
-    <string name="new_window">New window</string>
-    <string name="windowClose">Close</string>
-    <string name="windowMaximise">Maximise</string>
-    <string name="windowMinimise">Minimise</string>
+    <string name="new_window">새 창 열기</string>
+    <string name="windowClose">닫기</string>
+    <string name="windowMaximise">최대화</string>
+    <string name="windowMinimise">최소화</string>
     <string name="windowSynchronise">Synchronise</string>
     <string name="move_window">Move to</string>
     <string name="move_window_to_position2">Position %d (%s:%s)</string>
-    <string name="copy_settings">Copy settings to</string>
+    <string name="copy_settings">설정 복사하기</string>
     <string name="copy_settings_to_workspace">Workspace</string>
     <string name="copy_settings_to_window">Window %d (%s: %s)</string>
     <string name="change_to_normal">Change to normal window</string>
-    <string name="window_pin_mode">Pin</string>
+    <string name="window_pin_mode">핀</string>
 
     <!-- Notes screen -->
     <string name="no_chapter_notes">No notes exist in this chapter</string>
@@ -206,57 +206,57 @@
     <string name="morph_robinson_not_installed">Please download \'Robinson\'s Morphological Analysis Codes\' dictionary</string>
 
     <!-- Module download -->
-    <string name="download">Download Documents</string>
-    <string name="download_confirmation">Download a Bible from the Internet?</string>
+    <string name="download">다운로드 목록</string>
+    <string name="download_confirmation">데이터를 이용하여 성서를 다운로드하시겠습니까?</string>
     <string name="download_source_message">Documents are downloaded from:\n https://www.crosswire.org,\n https://ibtrussia.org,\n https://ebible.org, and\n https://andbible.github.io</string>
-    <string name="download_document_confirm_prefix">Download</string>
+    <string name="download_document_confirm_prefix">다운로드</string>
     <string name="download_refreshing_book_list">Refreshing list of available documents</string>
-    <string name="download_refresh_book_list_menu_item">Refresh</string>
+    <string name="download_refresh_book_list_menu_item">새로고침</string>
     <string name="error_downloading">An error occurred downloading.  Please check your internet connection.</string>
     <string name="storage_space_warning">Insufficient local storage space.</string>
     <string name="too_many_jobs">Too many tasks executing.  Please wait for some to finish and try again.</string>
     <string name="document_not_installed">Please download \'%s\'</string>
-    <string name="free_text_search_documents">Search</string>
-    <string name="chooce_language_hint">Language</string>
-    <string name="one_more_back_press">One more pressing of back button will close app</string>
+    <string name="free_text_search_documents">찾기</string>
+    <string name="chooce_language_hint">언어</string>
+    <string name="one_more_back_press">두번 탭하면 종료되요</string>
     <string name="document_filter_results">%d documents</string>
-    <string name="download_question_title">Do you want to proceed to download documents?</string>
-    <string name="download_question_message">If you live in a persecuted country,
-        you might need to be careful about downloading christian material via Internet.
-        Instead, you might want to obtain module zip files more securely and install them
-        via "Load Documents From Zip". Are you sure you want to proceed with downloading?
-        All downloads from module repositories are encrypted (HTTPS).
+    <string name="download_question_title">문서 다운로드를 계속하시겠습니까?</string>
+    <string name="download_question_message">만약 당신이 박해받는 나라에 살고 있다면,
+인터넷을 통해 성서를 다운로드하는 것에 주의할 필요가 있습니다.
+대신 모듈 zip 파일을 불러와서 더 안전하게 가져와 설치할 수 있습니다.
+뒤에 있는 "현재 가지고 있는 zip파일 불러오기"옵션을 사용할 수 있습니다. 인터넷을 통해 다운로드를 계속하시겠습니까?
+모듈 저장소의 모든 다운로드는 암호화됩니다. (HTTPS)
     </string>
-    <string name="do_not_ask_again">Yes, do not ask any more</string>
-    <string name="recommended_document">Recommended!</string>
+    <string name="do_not_ask_again">더 이상 보지 않기</string>
+    <string name="recommended_document">추천</string>
     <string name="about_version_history">Version history: %s</string>
-    <string name="download_failed">Failed to download %s</string>
-    <string name="download_errors">Download errors</string>
+    <string name="download_failed">다운로드 실패했습니다 %s</string>
+    <string name="download_errors">다운로드 에러</string>
     <string name="failed_repositories_message">Could not connect to the following document repositories: \n\n%s\n\n</string>
     <string name="failed_downloads_message">The following files could not be downloaded:\n\n%s\n\n</string>
 
     <!--  Install zip file -->
-    <string name="install_zip">Load Document From Zip</string>
-    <string name="install_zip_module">Install Bible Module</string>
-    <string name="install_zip_successfull">Module was installed successfully</string>
-    <string name="extracting_zip_file">Extracting Zip file now…</string>
-    <string name="checking_zip_file">Checking given file…</string>
+    <string name="install_zip">현재 가지고 있는 zip파일 불러오기</string>
+    <string name="install_zip_module">성서 모듈 설치</string>
+    <string name="install_zip_successfull">성서 모듈이 성공적으로 설치되었습니다</string>
+    <string name="extracting_zip_file">Zip 파일을 추출하는 중...</string>
+    <string name="checking_zip_file">지정된 파일을 확인하는 중...</string>
     <string name="invalid_module">File does not contain a valid SWORD module</string>
     <string name="module_already_installed">File contains a module that is already installed</string>
-    <string name="install_zip_title">Please wait. Loading Zip file.</string>
+    <string name="install_zip_title">Zip 파일을 불러오고 있습니다. 잠시만 기다려주세요</string>
     <string name="overwrite_files">Following files already exists: %s Overwrite?</string>
-    <string name="overwrite_files_title">Overwrite files?</string>
+    <string name="overwrite_files_title">파일을 덮어쓰시겠습니까?</string>
 
     <!-- Daily Reading Plan -->
-    <string name="rdg_plan_title">Reading Plan</string>
-    <string name="rdg_plan_selector_title">Choose a Reading Plan</string>
+    <string name="rdg_plan_title">성서 읽기 계획</string>
+    <string name="rdg_plan_selector_title">읽기 계획 선택하기</string>
     <string name="rdg_plan_day">Day %s</string>
-    <string name="rdg_plan_set_start_date">Set Start Date…</string>
-    <string name="set_current_day">Set as current day…</string>
-    <string name="msg_set_current_day_reading_plan">This will set today as the current day in this plan and mark all previous days as read. Continue?</string>
-    <string name="done">Done</string>
-    <string name="reset">Reset</string>
-    <string name="reset_plan_question">Are you sure you want to reset this plan?</string>
+    <string name="rdg_plan_set_start_date">시작하는 날 선택하기</string>
+    <string name="set_current_day">현재 날짜 설정하기</string>
+    <string name="msg_set_current_day_reading_plan">오늘을 현재로 정하고 전일을 모두 읽은 것으로 표시합니다. 계속하시겠습니까?</string>
+    <string name="done">완료</string>
+    <string name="reset">리셋하기</string>
+    <string name="reset_plan_question">이 계획을 리셋하시겠습니까?</string>
     <string name="plan_duplicate_user_plan">
         There is a user reading plan in sdcard
         jsword/readingplan with the same name as an internal plan. It can not be listed here.
@@ -298,7 +298,7 @@
     </string>
 
     <!-- Document context menu -->
-    <string name="delete">Delete</string>
+    <string name="delete">삭제하기</string>
     <string name="delete_index">Delete search index</string>
     <string name="about">About</string>
     <string name="delete_doc">Delete %s?</string>
@@ -317,19 +317,19 @@
     <string name="open_link_in_special_window">Open link in special window</string>
 
     <!-- Bookmarks -->
-    <string name="bookmarks">Bookmarks</string>
-    <string name="add_bookmark">Add bookmark</string>
-    <string name="delete_bookmark">Delete bookmark</string>
-    <string name="bookmark_added">Bookmark added</string>
-    <string name="bookmark_date_updated">Bookmark date updated</string>
-    <string name="bookmark_deleted">Bookmark deleted</string>
-    <string name="bookmark_labels">Bookmark Labels</string>
-    <string name="manage_labels">Manage Bookmark Labels</string>
+    <string name="bookmarks">책갈피</string>
+    <string name="add_bookmark">책갈피 추가하기</string>
+    <string name="delete_bookmark">책갈피 삭제하기</string>
+    <string name="bookmark_added">책갈피가 추가되었습니다</string>
+    <string name="bookmark_date_updated">책갈피가 수정되었습니다</string>
+    <string name="bookmark_deleted">책갈피가 삭제되었습니다</string>
+    <string name="bookmark_labels">책갈피</string>
+    <string name="manage_labels">책갈피 관리</string>
     <string name="assign_labels">Assign labels</string>
-    <string name="new_label">New Label</string>
-    <string name="label_name_prompt">Name</string>
+    <string name="new_label">새로운 라벨</string>
+    <string name="label_name_prompt">이름</string>
     <string name="label_unlabelled">Unlabelled</string>
-    <string name="style">Style</string>
+    <string name="style">스타일</string>
 
     <!--  Sort orders used for Bookmarks and MyNotes -->
     <string name="sort_by_date">Date order</string>
@@ -337,8 +337,8 @@
     <string name="sort_by_alphabetical">Alphabetical order</string>
     
     <!-- Dictionary -->
-    <string name="dictionary">Dictionary</string>
-    <string name="search_dictionary_hint">Search dictionary</string>
+    <string name="dictionary">사전</string>
+    <string name="search_dictionary_hint">사전 검색</string>
 
     <!-- General Book -->
     <string name="general_book">Book</string>
@@ -357,13 +357,13 @@
     <string name="one_page">%d page</string>
     <string name="some_pages">%d pages</string>
     <!-- Speak - Common -->
-    <string name="stop">Stop</string>
-    <string name="pause">Pause</string>
-    <string name="rewind">Rewind</string>
-    <string name="forward">Forward</string>
-    <string name="tts_lang_not_available">Language is not available.</string>
+    <string name="stop">정지</string>
+    <string name="pause">일시정지</string>
+    <string name="rewind">되감기</string>
+    <string name="forward">빨리감기</string>
+    <string name="tts_lang_not_available">해당 언어에서는 사용할 수 없습니다</string>
     <string name="speak_queue">Queue</string>
-    <string name="speak_repeat">Repeat</string>
+    <string name="speak_repeat">반복하기</string>
 
     <!-- Speak - Bible -->
     <string name="speak_speed_title">Speak speed</string>
@@ -474,10 +474,10 @@
     <string name="mynote_saved">My Note saved</string>
     
     <!-- Backup and restore -->
-    <string name="backup_and_restore">Backup &amp; Restore</string>
+    <string name="backup_and_restore">백업 &amp; 복원</string>
     <string name="backup_modules">Backup Documents to…</string>
-    <string name="backup_app_database">Backup application database to…</string>
-    <string name="restore_app_database">Restore application database from…</string>
+    <string name="backup_app_database">다음 위치에 데이터베이스를 백업합니다.</string>
+    <string name="restore_app_database">해당 데이터베이스를 복원합니다</string>
     <string name="restore_confirmation">Overwrite My Notes, Bookmarks, Reading Plans and Workspaces?</string>
     <string name="restore_success">My Notes, Bookmarks, Reading Plans and Workspaces restored successfully</string>
     <string name="loading_backup">Loading database from backup…</string>
@@ -539,23 +539,23 @@
     <string name="doc_type_map">Map</string>
     
     <!-- Languages -->
-    <string name="lang_default">Default</string>
+    <string name="lang_default">기본값</string>
 
     <!-- General -->
-    <string name="okay">OK</string>
-    <string name="cancel">Cancel</string>
-    <string name="yes">Yes</string>
-    <string name="no">No</string>
-    <string name="error">Error</string>
-    <string name="please_wait">Please wait…</string>
-    <string name="all">All</string>
+    <string name="okay">확인</string>
+    <string name="cancel">취소</string>
+    <string name="yes">네</string>
+    <string name="no">아니오</string>
+    <string name="error">에러</string>
+    <string name="please_wait">기다려주세요</string>
+    <string name="all">전체</string>
     <string name="default_value">@string/lang_default</string>
-    <string name="edit">Edit</string>
+    <string name="edit">수정하기</string>
     <string name="watch_tutorial_video">Watch tutorial video (English)</string>
     <string name="verse_not_found">Verse not found</string>
 
     <!-- Errors -->
-    <string name="report_error">Send Report</string>
+    <string name="report_error">오류 보고하기</string>
     <string name="error_occurred">An error has occurred</string>
     <string name="error_occurred_with_link">An error has occurred. %s</string>
     <string name="error_no_content">No content for selected verse</string>
@@ -570,10 +570,10 @@
     <!-- Workspaces -->
     <string name="new_workspace">New</string>
     <string name="switch_to_workspace">Workspaces</string>
-    <string name="delete_workspace">Remove</string>
+    <string name="delete_workspace">제거</string>
     <string name="new_copied_workspace">Copy as new</string>
     <string name="workspace_number">Workspace %d</string>
-    <string name="rename_workspace">Rename</string>
+    <string name="rename_workspace">이름바꾸기</string>
     <string name="workspace_selector_title">Select workspace</string>
     <string name="workspace_settings">Settings…</string>
     <string name="give_name_workspace">Give name for new workspace</string>
@@ -600,7 +600,7 @@
         Beta users are encouraged to report bugs via Google Play or
         (preferably) via %s.
     </string>
-    <string name="beta_notice_content_3">If you are programmer, please consider contributing bug
+    <string name="beta_notice_content_3">만약 당신이 프로그래머라면, 버그를 리포트해주세요.
         fixes via %s yourself. :-)</string>
     <string name="beta_notice_github_issues">Github issues</string>
     <string name="beta_notice_github">Github</string>
@@ -653,20 +653,17 @@
         Long press verse location title in toolbar to jump to document selector.
         Long press the Back button to access the History list.
     </string>
-    <string name="help_window_pinning_title">Window pinning</string>
+    <string name="help_window_pinning_title">알림</string>
     <string name="help_window_pinning_text">
-        You can enable window pinning from options menu (three dots, right top corner).
-        If window pinning is enabled, you may show many pinned windows on bible view,
-        but only one non-pinned window. Pinned windows are displayed first, and then
-        unpinned windows. You might want to open bible documents as pinned windows, and
-        commentaries and maps etc. as non-pinned windows. Then you can easily
-        have bible documents always opened, and switch quickly between commentaries and
-        other extra material when you study bible.
+        옵션 메뉴(점 3개, 오른쪽 상단 구석)에서 창 고정 기능을 활성화할 수 있습니다.
+        창 고정이 사용 가능한 경우 성경 보기에 고정된 창을 여러 개 표시할 수 있지만 고정되지 않은 창은 하나만 표시할 수 있습니다. 고정된 창이 먼저 표시된 다음 표시됩니다.
+        창을 봉인하지 않았습니다. 성경 문서를 고정된 창으로 열고 주석서와 지도 등을 고정되지 않은 창으로 열 수 있습니다.
+        그러면 성경 문서를 항상 쉽게 열 수 있고, 성경을 공부할 때 코멘트와 기타 추가 자료 사이를 빠르게 전환할 수 있습니다.
     </string>
 
     <!-- Uncategorized -->
-    <string name="close">Close</string>
+    <string name="close">닫기</string>
     <string name="something_with_parenthesis">%s (%s)</string>
-    <string name="first_time_help_do_not_show_again">I understand</string>
-    <string name="first_time_help_show_next_time">Show again next time</string>
+    <string name="first_time_help_do_not_show_again">이해했습니다</string>
+    <string name="first_time_help_show_next_time">다음에 다시 표시합니다</string>
 </resources>
